--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Heatmaps</title>
+    <title>Pizza is Life</title>
     <link rel="stylesheet" type="text/css" href="styles.css"></link>
   </head>
 
