--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@
   </head>
 
   <body>
-    <div id="floating-panel">
-      <button onclick="toggleHeatmap()">Toggle Heatmap</button>
-      <button onclick="changeGradient()">Change gradient</button>
-      <button onclick="changeRadius()">Change radius</button>
-      <button onclick="changeOpacity()">Change opacity</button>
-    </div>
     <div id="map"></div>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxGH5zZbUiYeX8IalIM8Fqmk0J1Ptodpc&libraries=visualization&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxGH5zZbUiYeX8IalIM8Fqmk0J1Ptodpc&libraries=visualization,places,geometry&callback=initMap">
     </script>
   </body>
 </html>
