--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Pizza is Life</title>
     <link rel="stylesheet" type="text/css" href="styles.css"></link>
-    <script src="script.js"></script>
   </head>
 
   <body>
     <div id="map"></div>
-    <script defer
+    <script src="script.js"></script>
+    <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxGH5zZbUiYeX8IalIM8Fqmk0J1Ptodpc&libraries=visualization,places,geometry&callback=initMap">
     </script>
   </body>
