--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <h1>Pizza is <span class="bold">LIFE</span></h1>
     <div id="map"></div>
     <script src="script.js"></script>
     <script async defer
