--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>Pizza is <span class="bold">LIFE</span></h1>
+    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     <div id="map"></div>
     <script src="script.js"></script>
     <script async defer
