--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <body>
     <h1>Pizza is <span class="bold">LIFE</span></h1>
-    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+    <input id="pac-input" type="text" placeholder="Search Box">
+
     <div id="map"></div>
     <script src="script.js"></script>
     <script async defer
