--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div>
     <span class="menuButton" onclick="openMenu()">MENU</span>
     <h1>Pizza is <span class="bold">LIFE</span></h1>
-    <input id="pac-input" type="text" placeholder="Search Box">
+    <input id="pac-input" type="text" placeholder="Enter your City">
 
     <div id="map"></div>
   </div>
