--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <body>
     <div id="sideMenu" class="sideMenu">
       <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">&times;</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
+      <span >About
+        <div id="about"></div>
+      </span>
+      <span >Toggle</span>
+      <span >Clients</span>
+      <span >Contact</span>
     </div>
   <div>
     <span class="menuButton" onclick="openMenu()">MENU</span>
