--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="sideMenu" class="sideMenu">
       <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">&times;</a>
       <span >About
-        <div id="about"></div>
+        <div id="about" onclick="aboutUs()"></div>
       </span>
       <span >Toggle</span>
       <span >Clients</span>
