About format script

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div id="sideMenu" class="sideMenu">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">&times;</a>
+      <span class="closebtn" onclick="closeMenu()">&times;</span>
       <span >About
         <div id="about" onclick="aboutUs()"></div>
       </span>
