--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 
   <body>
     <div id="sideMenu" class="sideMenu">
-      <span class="closebtn" onclick="closeMenu()">&times;</span>
-      <span >About
-        <div id="about" onclick="aboutUs()"></div>
-      </span>
-      <span >Toggle</span>
-      <span >Clients</span>
-      <span >Contact</span>
+      <a class="closebtn" onclick="closeMenu()">&times;</a>
+      <a onclick="aboutUs()">About <br><div class="blurb" id="aboutUs"></div></a>
+      <a >Toggle</a>
+      <a >Clients</a>
+      <a >Contact</a>
     </div>
   <div>
     <span class="menuButton" onclick="openMenu()">MENU</span>
