--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <title>Pizza is Life</title>
     <link rel="stylesheet" type="text/css" href="styles.css"></link>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="script.js"></script>
   </head>
 
   <body>
     <div id="sideMenu" class="sideMenu">
       <a class="closebtn" onclick="closeMenu()">&times;</a>
-      <a onclick="aboutUs()">About <br><div class="blurb" id="aboutUs"></div></a>
-      <a >Toggle</a>
+      <a onclick="aboutUs()">About <br>
+        <div class="blurb" id="aboutUs">
+        </div></a>
+      <a onclick="console.log(63110)">Toggle</a>
       <a >Clients</a>
       <a >Contact</a>
     </div>
@@ -22,7 +25,7 @@
 
     <div id="map"></div>
   </div>
-    <script src="script.js"></script>
+
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxGH5zZbUiYeX8IalIM8Fqmk0J1Ptodpc&libraries=visualization,places,geometry&callback=initMap">
     </script>
