--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="sideMenu" class="sideMenu">
       <a class="closebtn" onclick="closeMenu()">&times;</a>
       <a onclick="aboutUs()">About <br>
-        <div class="blurb" id="aboutUs">
+        <div class="blurb" id="about">
         </div></a>
       <a onclick="console.log(63110)">Toggle</a>
       <a >Clients</a>
