About tab works

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <div class="blurb" id="about">
         </div></a>
       <a onclick="console.log(63110)">Toggle</a>
-      <a >Clients</a>
-      <a >Contact</a>
+      <a >Options of some sort...</a>
     </div>
   <div>
     <span class="menuButton" onclick="openMenu()">MENU</span>
