still not working

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   <div>
     <span class="menuButton" onclick="openMenu()">MENU</span>
     <h1>Pizza is <span class="bold">LIFE</span></h1>
-    <input id="pac-input" type="text" placeholder="Enter your City">
-    <input id="searchButton" type="submit" value="Submit">
+    <form>
+      <input type="text" id="cityInput" placeholder="Enter Your City">
+      <input id="searchButton" type="submit" value="Submit">
+    </form>
     <div id="map"></div>
   </div>
   </body>
