POST type on AJAX

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a onclick="aboutUs()">About <br>
         <div class="blurb" id="about">
         </div></a>
-      <a onclick="console.log(63110)">Toggle</a>
+      <a >Toggle</a>
       <a >Options of some sort...</a>
     </div>
   <div>
